--- a/assets/backend/css/styles.css
+++ b/assets/backend/css/styles.css
@@ -1,7 +1,11 @@
 /* padding */
+.pb-100 {
+    padding-bottom: 100px;
+}
 .pb-450 {
     padding-bottom: 450px;
 }
+
 .pb-500 {
     padding-bottom: 500px;
 }
