--- a/assets/backend/css/styles.css
+++ b/assets/backend/css/styles.css
@@ -2,6 +2,10 @@
 .pb-100 {
     padding-bottom: 100px;
 }
+.pb-150 {
+    padding-bottom: 150px;
+}
+
 .pb-450 {
     padding-bottom: 450px;
 }
@@ -38,3 +42,142 @@
 /* btn */
 
 /* end btn */
+
+/* login */
+.grid-members {
+    border: 1px solid #DDDDDD;
+    box-shadow: 0 2px 40px 0 rgba(0, 0, 0, 0.05); 
+}
+
+.img-responsive {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+.grid-members .grid-item:nth-child(1) p { /* css p  */
+    padding: 0 20px;
+    margin-bottom: 10px;
+    font-weight: bold;
+    font-size: 18px;
+    color: var(--primary-color);
+    text-transform: uppercase;
+}
+
+.grid-members .grid-item:nth-child(1) ul li { /* css li */
+    display: flex;
+    margin-bottom: 10px;
+}
+
+
+.top-title a.active {
+    font-weight: bold;
+    color: var(--primary-color);
+    border-color: #FF6700;
+}
+
+.top-title {
+    display: flex;
+    align-items: center;
+    margin-bottom: 32px;
+    padding-top: 18px;
+}
+
+.top-title a {
+    text-align: center;
+    padding-bottom: 10px;
+    width: 100%;
+    text-transform: uppercase;
+    font-size: 22px;
+    color: #444;
+    border-bottom: 1px solid #DDDDDD;
+    transition: 0.1s ease-in-out;
+    
+}
+
+.top-title:hover a {
+    text-decoration: none;
+    
+}
+
+.top-title--register:hover {
+    color: var(--primary-color);
+}
+
+.box {
+    margin-bottom: 15px;
+    padding: 0 20px;
+}
+
+.box input {
+    
+    color: #333333;
+    font-size: 16px;
+    height: 40px;
+    border: 1px solid #DDDDDD;
+    box-shadow: 1px 1px 3px rgb(0 0 0 / 10%);
+    border-radius: 5px;
+    
+}
+.box-username, .box-password {
+    padding: 0 14px;
+}
+
+.box-forgot {
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.forgot-password {
+    font-size: 16px;
+    margin-top: 10px;
+    color: var(--primary-color);
+    transition: 0.1s ease-in-out;
+}
+.forgot-password:hover {
+    text-decoration: none;
+}
+
+.box .submit-btn {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--primary-color);
+    border-radius: 5px;
+    color: var(--white-color);
+    font-size: 16px;
+    margin-top: 20px;
+    padding: 5px 50px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: none;
+    transition: 0.1s ease-in-out; 
+    padding: 0 20px;
+}
+
+.box .submit-btn:hover {
+    background: var(--light-orange-color);
+}
+
+.wrapper {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    font-weight: 100;
+    font-size: 18px;
+    color: #000000;
+    justify-content: space-between;
+    line-height: normal;
+}
+
+.wrapper span {
+    width: 120px;
+    height: 1px;
+    background: #ccc;
+}
+
+/* end login */
+
